--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/insureInvest
+MONGO_URI=mongodb+srv://insureinvest-admin:<Secure@2025876>@cluster0.ot6rxpc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
