--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://insureinvest-admin:<Secure@2025876>@cluster0.ot6rxpc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://insureinvest-admin:Secure%402025876@cluster0.ot6rxpc.mongodb.net/insureinvest-admin?retryWrites=true&w=majority&appName=Cluster0
