--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "insure-invest-backend-v2",
+  "name": "insureinvest-backend",
   "version": "1.0.0",
-  "description": "Backend for InsureInvest lead generation platform",
-  "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.6.1"
+    "mongoose": "^7.3.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.0.1"
   }
 }
