--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "insureinvest-backend",
+  "name": "insure-invest-backend-v2",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
